--- a/po/gfs2-utils.pot
+++ b/po/gfs2-utils.pot
@@ -6,7 +6,7 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: gfs2-utils 3.4.1.1.dev\n"
+"Project-Id-Version: gfs2-utils 3.5.0\n"
 "Report-Msgid-Bugs-To: cluster-devel@redhat.com\n"
 "POT-Creation-Date: 2023-02-09 09:51+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
