gfs2_grow: Optionally allow not issuing discard requests
mkfs.gfs2 supports a -K option which disables issuing discard requests
for unused blocks on the LUN. gfs2_grow does not have an equivalent
option so even if the filesystem was originally created with the -K
option a subsequent grow operation will incur the, potentially high,
cost of performing the discard.

Signed-off-by: Mark Syms <mark.syms@cloud.com>

--- a/gfs2/man/gfs2_grow.8
+++ b/gfs2/man/gfs2_grow.8
@@ -38,6 +38,12 @@ Prints out a short usage message and exits.
 \fB-q\fP
 Be quiet.  Don't print anything.
 .TP
+\fB-K\fP
+Do not attempt to discard the block device contents. Issuing discards to the
+device allows some solid state devices and sparse or thin-provisioned storage
+devices to optimise free space. Other devices may emulate this behaviour by
+zeroing the device contents, which can be a slow process.
+.TP
 \fB-T\fP
 Test. Do all calculations, but do not write any data to the disk and do not
 expand the filesystem. This is used to discover what the tool would have done
