gfs2_edit.8: Fix man page warning
W: gfs2-utils: groff-message troff:<standard input>:124: warning: cannot
select font 's' [usr/share/man/man8/gfs2_edit.8.gz:1]

--- a/gfs2/man/gfs2_edit.8
+++ b/gfs2/man/gfs2_edit.8
@@ -121,7 +121,7 @@ for example, to artificially change the di_size field for an inode
 in order to test fsck.gfs2's ability to detect and fix the problem.
 
 .TP
-\fB-s\fs [\fIstructure\fR | \fIblock\fR]
+\fB-s\fP [\fIstructure\fR | \fIblock\fR]
 Specify a starting block for interactive mode.  Any of the well-known
 locations found in the -p option may be specified.  If you want to start
 on a particular resource group, specify it in quotes, e.g. -s "rg 3"
